fix unzip quiet option and redirect error stream